chore(config, logging, docs): Ajusta configuração, logging e documentação da versão v1.10.1
Atualiza o .gitignore para incluir logs, .venv e arquivos temporários.
Corrige a configuração do Redis no docker-compose.yml para usar REDIS_URL.
Reverte o nível de logging para INFO e remove log de debug temporário do downloader.
Atualiza CHANGELOG.md com as mudanças da versão v1.10.1.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Ignore o ambiente virtual
+.venv/
 venv/
 __pycache__/
 *.pyc
@@ -6,6 +7,10 @@ __pycache__/
 # Dados baixados
 dados_anp/
 *.xlsx
+
+# Logs
+*.log
+temp/
 
 # Configurações sensíveis
 .env
